# weight-vs-loss-convergence-pinn

./: .gitignore  TRAINING.md  config.py  main.py  pyproject.toml  train.py
balancer/: __init__.py  base.py  inv.py  inverse_proportional.py  proportional.py  registry.py  simple.py  softAdapt.py  softadapt.py  uniform.py
burgers/: model.py  train.ipynb  train.py  trainer.py  utils.py
burgers/data/: dataset.py  gen_data.py
navier-stokes/: model.py  trainer.py
navier-stokes/data/: gen_data.py
share/: MLP.py  __init__.py  config.py
